# beambin

./: .gitignore  Cargo.toml  README.md  SECURITY.md  justfile  tailwind.config.js
.config/: config.example.toml  static
.config/databeam/: config.example.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: docs.yml
crates/beambin/: .gitignore  Cargo.toml  README.md
crates/beambin-core/: Cargo.toml  README.md
crates/beambin-core/src/: api.rs  config.rs  database.rs  lib.rs  model.rs
crates/beambin-core/src/api/: mod.rs  posts.rs  util.rs
crates/beambin/src/: main.rs  pages.rs
crates/beambin/static/css/: input.css
crates/beambin/static/js/: app.js  footer.js
crates/beambin/static/js/ns/: bundled_env.js  context.js  editor.js  markdown.js
crates/beambin/templates/: base.html  error.html  homepage.html
crates/beambin/templates/post/: context.html  editor.html  password_prompt.html  view.html
