[package]
name = "beambin-core"
description = "Pluggable pastebin backend"
authors = ["trisuaso"]
license = "MIT"

version = "1.0.1"
edition = "2021"

documentation = "https://docs.rs/postbeam"
repository = "https://github.com/trisuaso/postbeam"
categories = ["web-programming", "database"]

[package.metadata.docs.rs]
features = ["sqlite"]
no-default-features = true

[features]
postgres = ["databeam/postgres"]
mysql = ["databeam/mysql"]
sqlite = ["databeam/sqlite"]
default = ["databeam/sqlite"]    # for development

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
databeam = { version = "0.1.1", default-features = false }
dotenv = "0.15.0"
regex = "1.10.5"
idna = "1.0.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
rainbeam-shared = "0.1.2"
toml = "0.8.19"
mime_guess = "2.0.5"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
