[package]
name = "beambin-core"
description = "Pluggable pastebin backend"
authors = ["trisuaso"]
license = "MIT"

version = "1.0.2"
edition = "2021"

documentation = "https://docs.rs/beambin-core"
repository = "https://github.com/trisuaso/beambin-core"
categories = ["web-programming", "database"]

[package.metadata.docs.rs]
features = ["sqlite"]
no-default-features = true

[features]
postgres = ["databeam/postgres", "authbeam/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite"]
redis = ["databeam/redis"]
moka = ["databeam/moka"]
default = ["databeam/sqlite", "authbeam/sqlite", "redis"] # for development

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
databeam = { version = "1.0.0", default-features = false }
dotenv = "0.15.0"
regex = "1.11.1"
idna = "1.0.3"
axum-extra = { version = "0.10.0", features = ["cookie"] }
rainbeam-shared = "0.2.0"
toml = "0.8.20"
mime_guess = "2.0.5"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
authbeam = { version = "3.0.1", default-features = false }
pathbufd = "0.1.4"
